# mas_navigation

./: .travis.yml  Dockerfile  README.md  docker-compose.yml  mas-navigation.rosinstall
.github/: CODEOWNERS
.travis/: Dockerfile
mas_navigation/: CMakeLists.txt  package.xml
mcr_collision_velocity_filter/: CMakeLists.txt  package.xml
mcr_collision_velocity_filter/ros/config/: collision_velocity_filter.yaml
mcr_collision_velocity_filter/ros/include/mcr_collision_velocity_filter/: collision_velocity_filter.h  collision_velocity_filter_node.h
mcr_collision_velocity_filter/ros/launch/: collision_velocity_filter.launch
mcr_collision_velocity_filter/ros/src/: collision_velocity_filter.cpp  collision_velocity_filter_node.cpp
mcr_direct_base_controller/: CMakeLists.txt  README.md  package.xml
mcr_direct_base_controller/ros/config/: DirectBaseController.cfg
mcr_direct_base_controller/ros/launch/: direct_base_controller.launch
mcr_direct_base_controller/ros/src/mcr_direct_base_controller_ros/: direct_base_controller_coordinator.py
mcr_global_planner/: CMakeLists.txt  package.xml  plugins.xml
mcr_global_planner/ros/include/mcr_global_planner/: global_planner_wo.h
mcr_global_planner/ros/include/mcr_global_planner_with_orientations/: global_planner_with_orientations.h
mcr_global_planner/ros/src/: global_planner_with_orientations.cpp
mcr_global_planner/ros/src/mcr_global_planner/: global_planner_wo.cpp
mcr_global_planner/ros/src/mcr_global_planner_with_orientations/: global_planner_with_orientations.cpp
mcr_move_base_tools/: CMakeLists.txt  README.md  package.xml  setup.py
mcr_move_base_tools/config/: carrot_planner.yaml  dwa_local_planner.yaml
mcr_move_base_tools/ros/config/: config.yaml  default.yaml  dwa_local_planner.yaml  eband_local_planner.yaml  global_planner.yaml
mcr_move_base_tools/ros/src/mcr_move_base_tools/: tools.py
mcr_move_base_tools/src/mcr_move_base_tools/: tools.py
mcr_move_base_tools/srv/: MoveBasePlannerUpdater.srv
mcr_move_base_tools/tests/: mode_update_planner.py  planner_update.py  ros_plugins.py  update_planner.py
mcr_navigation_goal_marker/: CMakeLists.txt  package.xml
mcr_navigation_msgs/: CMakeLists.txt
mcr_navigation_tools/: CMakeLists.txt  README.md  package.xml
mcr_navigation_tools/common/include/mcr_navigation_tools/: path_length_calculator.h
mcr_navigation_tools/common/include/path_length_calculator/: path_length_calculator.h
mcr_navigation_tools/common/src/: path_length_calculator.cpp
mcr_navigation_tools/ros/include/: path_length_calculator_node.h  pose_array_to_path.h
mcr_navigation_tools/ros/include/mcr_navigation_tools/: laser_distances_node.h  path_length_calculator_node.h  pose_array_to_path.h  pose_array_to_path_node.h
mcr_navigation_tools/ros/launch/: laser_distances.launch  navigation_goals_as_marker.launch  path_length_calculator.launch  pose_array_to_path_converter.launch  pose_visualiser.launch
mcr_navigation_tools/ros/scripts/: map_saver  navigation_goals_as_marker  pose_visualiser  save_base_map_poses_to_file
mcr_navigation_tools/ros/src/: laser_distances_node.cpp  path_length_calculator_node.cpp  pose_array_to_path.cpp  pose_array_to_path_node.cpp
mcr_recovery_behaviors/: CMakeLists.txt  package.xml  plugins.xml
mcr_recovery_behaviors/include/force_field_recovery/: force_field_recovery.h
mcr_recovery_behaviors/ros/config/: force_field_parameters.yaml
mcr_recovery_behaviors/ros/include/force_field_recovery/: force_field_recovery.h
mcr_recovery_behaviors/ros/src/: force_field_recovery.cpp
mcr_recovery_behaviors/src/: force_field_recovery.cpp
mcr_relative_base_controller/: CMakeLists.txt  package.xml  setup.py
mcr_relative_base_controller/ros/include/mcr_relative_base_controller/: relative_base_controller_node.h
mcr_relative_base_controller/ros/launch/: direct_base_controller.launch  relative_base_controller.launch
mcr_relative_base_controller/ros/mockup/: relative_base_controller_mockup.cpp
mcr_relative_base_controller/ros/scripts/: direct_base_controller_coordinator_node
mcr_relative_base_controller/ros/src/: relative_base_controller_node.cpp
mcr_relative_base_controller/ros/src/mcr_relative_base_controller_ros/: direct_base_controller_coordinator.py
mcr_relative_base_controller/ros/test/: relative_base_controller_test.cpp
mcr_relative_movements/: CMakeLists.txt  package.xml  setup.py
mcr_relative_movements/common/include/mcr_relative_movements/: homogenous_transform.h
mcr_relative_movements/common/src/: homogenous_transform.cpp
mcr_relative_movements/ros/launch/: relative_movements.launch  relative_movements_mockup.launch
mcr_relative_movements/ros/mockup/: relative_movements_node_mockup
mcr_relative_movements/ros/scripts/: test_relative_movements
mcr_relative_movements/ros/src/: relative_movements_node.cpp
