<?xml version="1.0"?>
<package>
  <name>mcr_direct_base_controller</name>
  <version>0.1.0</version>
  <description>
    This package provides a coordinator/configurator to control components that
    moves the mobile base in Cartesian space until a pose is reached.
  </description>

  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>
  <author email="aaqib.mohammed@smail.inf.h-brs.de">Aaqib Parvez Mohammad</author>
  <author email="ramit.sharma@smail.inf.h-brs.de">Ramit Sharma</author>
  <author email="pranjal.dhole@smail.inf.h-brs.de">Pranjal Dhole</author>
  <author email="md.zahiduzzaman@smail.inf.h-brs.de">Md Zahiduzzaman</author>


  <maintainer email="santosh.thoduka@h-brs.de">Santosh Thoduka</maintainer>
  <maintainer email="deebul.nair@h-brs.de">Deebul Nair</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mcr_monitoring_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mcr_monitoring_msgs</run_depend>
  <run_depend>mcr_geometric_relation_monitors</run_depend>
  <run_depend>mcr_common_converters</run_depend>
  <run_depend>mcr_twist_controller</run_depend>
  <run_depend>mcr_twist_limiter</run_depend>
  <run_depend>mcr_twist_synchronizer</run_depend>
  <run_depend>mcr_manipulation_measurers</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
