<?xml version="1.0"?>
<package>
  <name>mcr_relative_movements</name>
  <version>0.0.1</version>
  <description>move base relatively</description>

  <maintainer email="nirmal.giftsun@smail.inf.h-brs.de">Nirmal Giftsun</maintainer>

  <license>GPLv3</license>

  <author email="nirmal.giftsun@smail.inf.h-brs.de">Nirmal Giftsun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mcr_navigation_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>  
 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_navigation_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
